--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "files": [],
-  "include": [],
+  "include": ["src/**/*", "test/**/*", "vitest.config.ts"],
   "references": [
     { "path": "packages/api" },
     { "path": "packages/app" },
