--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,6 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.848.0",
+    "@aws-sdk/lib-dynamodb": "^3.850.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
