--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/supertest": "^6.0.3",
+    "aws-sdk-client-mock": "^4.1.0",
+    "aws-sdk-client-mock-vitest": "^6.1.1",
     "supertest": "^7.1.4",
     "vitest": "^3.2.4"
   }
