--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "run": "tsc run",
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc", 
     "test": "vitest",
     "test:watch": "vitest --watch"
   },
