--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
