refactor(shared,app,root): remove codetask types, add todo schema, update configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,4 +110,11 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   }
+  // "files": [],
+  // "references": [
+  //   { "path": "packages/api" },
+  //   { "path": "packages/app" },
+  //   { "path": "packages/shared" },
+  //   { "path": "packages/vscode-extension" }
+  // ]
 }
