--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,19 +2,26 @@
   "name": "@dev-dashboard/shared",
   "version": "1.0.0",
   "description": "Shared types and schemas for dev-dashboard",
-  "type": "module",
-  "main": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
       "types": "./dist/esm/index.d.ts"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc -b tsconfig.esm.json",
-    "dev": "tsc -b tsconfig.esm.json --watch",
+    "build": "npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "dev": "npm run dev:esm & npm run dev:cjs",
+    "dev:esm": "tsc -p tsconfig.esm.json",
+    "dev:cjs": "tsc -p tsconfig.cjs.json",
     "clean": "rimraf dist"
   }
 }
