--- a/packages/shared/tsconfig.cjs.json
+++ b/packages/shared/tsconfig.cjs.json
@@ -3,8 +3,11 @@
   "compilerOptions": {
     "outDir": "dist/cjs",
     "module": "CommonJS",
-    "declaration": false,
-    "declarationMap": false
+    "target": "ES2020",
+    "moduleResolution": "Node",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
   },
   "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"]
 }
