--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -20,15 +20,8 @@
       "@dev-dashboard/shared/*": ["../../shared/src/*"]
     }
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules",
-    "**/*.test.ts",
-    "**/*.spec.ts"
-  ],
+  "include": ["src/**/*"],
+  "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"],
   "ts-node": {
     "esm": true,
     "compilerOptions": {
