--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -9,9 +9,7 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-    "onCommand:vscode-extension.scanTodos"
-  ],
+  "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -30,15 +28,7 @@
     "@types/vscode": "^1.103.0"
   },
   "dependencies": {
+    "@dev-dashboard/shared": "1.0.0",
     "axios": "^1.11.0"
-  },
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@shared/*": [
-        "../shared/src/*"
-      ]
-    }
   }
 }
