--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dev-dashboard/shared": "1.0.0",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.3",
     "axios": "^1.11.0",
