--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,15 +15,16 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.848.0",
     "@aws-sdk/lib-dynamodb": "^3.850.0",
+    "@dev-dashboard/shared": "1.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0",
-    "@dev-dashboard/shared": "1.0.0"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
