--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,6 +18,7 @@
     "@dev-dashboard/shared": "1.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
