--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,6 +24,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "redis": "^5.8.3",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
