--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,6 +18,7 @@
     "@dev-dashboard/shared": "1.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/supertest": "^6.0.3",
