--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,17 +14,21 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.3",
+    "@tanstack/react-router": "^1.139.11",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "playwright": "^1.57.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.8.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tanstack/router-devtools": "^1.139.11",
+    "@tanstack/router-plugin": "^1.139.11",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
