--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "dev:app": "cd packages/app && vite --config vite.config.ts",
     "dev:ext": "cd packages/vscode-extension && tsx src/extension.ts",
     "dev:shared": "npm run dev -w @dev-dashboard/shared",
-    "dev": "concurrently \"npm run dev:shared\" \"npm run dev:api\" \"npm run dev:app\" \"npm run dev:ext\"",
+    "dev": "concurrently \"npm run dev:shared\" \"npm run dev:shared\" \"npm run dev:api\" \"npm run dev:app\" \"npm run dev:ext\"",
     "build": "npm run build -ws --if-present",
     "build:api": "cd packages/api && tsc -b tsconfig.build.json",
     "build:app": "cd packages/app && vite build",
-    "build:ext": "cd packages/vscode-extension && tsc -b tsconfig.build.json",
+    "build:ext": "cd packages/vscode-extension && tsc -p ./",
     "clean": "rimraf packages/*/dist packages/*/out",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
