--- a/packages/vscode-extension/.vscodeignore
+++ b/packages/vscode-extension/.vscodeignore
@@ -1,11 +1,16 @@
-.vscode/**
-.vscode-test/**
+*
+
+!out/
+!package.json
+!README.md
+!LICENSE
+
+../
+**/../*
+packages/
+!packages/vscode-extension/
+
+node_modules/**
 src/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/eslint.config.mjs
-**/*.map
 **/*.ts
-**/.vscode-test.*
+**/*.map
