--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -2,8 +2,9 @@
   "name": "dev-dashboard",
   "displayName": "Dev Dashboard",
   "publisher": "iancardona",
-  "description": "Scan and send TODO from your workspace to your dashboard.",
-  "version": "0.0.1",
+  "description": "Scan and send TODOs to your dashboard.",
+  "version": "0.0.2",
+  "icon": "DevDashboard.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/Ian-Cardona/dev-dashboard"
