--- a/packages/vscode-extension/.vscodeignore
+++ b/packages/vscode-extension/.vscodeignore
@@ -1,25 +1,28 @@
-src/
+.vscode/**
+.vscode-test/**
+.git/
+src/**
 **/*.ts
 **/*.tsx
 **/*.map
 **/*.spec.*
 **/*.test.*
 **/__tests__/**
-node_modules/
-.vscode/
-.git/
 .env
 .env.*
+.gitignore
+.DS_Store
 npm-debug.log
 yarn.lock
 pnpm-lock.yaml
+tsconfig.json
+vsc-extension-quickstart.md
+build.js
 Dockerfile*
 docker-compose.yml
-vsc-extension-quickstart.md
-tsconfig.json
-.DS_Store
 ../api/
 ../app/
 ../shared/
 ../.DS_Store
 ../../
+node_modules/**
