--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "packages/*"
   ],
   "scripts": {
-    "dev:api": "cd packages/api && tsx watch src/server.ts",
-    "dev:app": "cd packages/app && vite --config vite.config.ts",
-    "dev:ext": "cd packages/vscode-extension && tsx src/extension.ts",
+    "dev:api": "npm run dev -w api",
+    "dev:app": "npm run dev -w app",
     "dev:shared": "npm run dev -w @dev-dashboard/shared",
-    "dev": "concurrently \"npm run dev:shared\" \"npm run dev:shared\" \"npm run dev:api\" \"npm run dev:app\" \"npm run dev:ext\"",
-    "build": "npm run build -ws --if-present",
-    "build:api": "cd packages/api && tsc -b tsconfig.build.json",
-    "build:app": "cd packages/app && vite build",
-    "build:ext": "cd packages/vscode-extension && tsc -p ./",
-    "build:shared": "npm run build -w @dev-dashboard/shared",
+    "dev": "concurrently \"npm run dev:shared\" \"npm run dev:api\" \"npm run dev:app\"",
+    "build": "npm run build -w @dev-dashboard/shared && npm run build -ws --if-present",
     "clean": "rimraf packages/*/dist packages/*/out",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
