--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -15,13 +15,13 @@ RUN npm run build -w @dev-dashboard/shared && npm run build -w api
 FROM node:20-alpine AS runtime
 WORKDIR /app
 
+COPY --from=build /app/node_modules ./node_modules
+
 COPY --from=build /app/packages/api/dist ./dist
-
-COPY --from=build /app/packages/shared/dist ./node_modules/@dev-dashboard/shared/dist
-
 COPY --from=build /app/packages/api/package.json ./package.json
 
-COPY --from=build /app/node_modules ./node_modules
+COPY --from=build /app/packages/shared/dist ./packages/shared/dist
+COPY --from=build /app/packages/shared/package.json ./packages/shared/package.json
 
 ENV NODE_ENV=production
 ENV PORT=3000
