--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -9,7 +9,7 @@
     "sourceMap": true,
     "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
