--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -18,8 +18,6 @@ WORKDIR /app
 COPY --from=build /app/node_modules ./node_modules
 
 COPY --from=build /app/packages/api/dist ./dist
-
-COPY --from=build /app/packages/api/dist ./dist
 COPY --from=build /app/packages/api/package.json ./package.json
 
 COPY --from=build /app/packages/shared/package.json ./node_modules/@dev-dashboard/shared/package.json
@@ -30,4 +28,4 @@ ENV PORT=3000
 
 EXPOSE 3000
 
-CMD ["node", "dist/server.js"]
+CMD ["node", "dist/server.mjs"]
