--- a/packages/shared/tsconfig.esm.json
+++ b/packages/shared/tsconfig.esm.json
@@ -3,12 +3,15 @@
   "compilerOptions": {
     "outDir": "dist/esm",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "target": "ES2020",
-    "esModuleInterop": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "allowImportingTsExtensions": false,
+    "noEmitOnError": true,
+    "isolatedModules": true
   },
+  "include": ["src/**/*"],
   "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"]
 }
