--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -6,20 +6,18 @@ COPY package.json package-lock.json ./
 COPY packages/api/package.json ./packages/api/package.json
 COPY packages/shared/package.json ./packages/shared/package.json
 
-COPY . .
-
 RUN npm ci --no-audit --no-fund
 
-RUN npm run build -w @dev-dashboard/shared && npm run build -w api
+COPY . .
+
+RUN npm run build
 
 FROM node:20-alpine AS runtime
 WORKDIR /app
 
 COPY --from=build /app/node_modules ./node_modules
-
 COPY --from=build /app/packages/api/dist ./dist
 COPY --from=build /app/packages/api/package.json ./package.json
-
 COPY --from=build /app/packages/shared/package.json ./node_modules/@dev-dashboard/shared/package.json
 COPY --from=build /app/packages/shared/dist ./node_modules/@dev-dashboard/shared/dist
 
