--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,27 +1,24 @@
 {
   "name": "@dev-dashboard/shared",
   "version": "1.0.0",
+  "type": "module",
   "description": "Shared types and schemas for dev-dashboard",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/esm/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/esm/index.d.ts"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.mts"
     }
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "dev": "npm run dev:esm & npm run dev:cjs",
-    "dev:esm": "tsc -p tsconfig.esm.json",
-    "dev:cjs": "tsc -p tsconfig.cjs.json",
+    "build": "tsdown --format esm,cjs",
+    "dev": "tsdown --format esm,cjs --watch",
     "clean": "rimraf dist"
   }
 }
