--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -3,14 +3,16 @@ FROM node:20-alpine AS build
 WORKDIR /app
 
 COPY package.json package-lock.json ./
+
 COPY packages/api/package.json ./packages/api/package.json
 COPY packages/shared/package.json ./packages/shared/package.json
 
 RUN npm ci --no-audit --no-fund
 
-COPY . .
+COPY packages/shared ./packages/shared
+COPY packages/api ./packages/api
 
-RUN npm run build
+RUN npm run build:api:container
 
 FROM node:20-alpine AS runtime
 WORKDIR /app
