--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
         branches: ["main"]
     pull_request:
         branches: ["main"]
-    workflow_dispatch: # Allows manual triggering from the Actions tab
+    workflow_dispatch:
 
 jobs:
     build:
@@ -23,5 +23,6 @@ jobs:
                   node-version: 20.x
                   cache: "npm"
             - run: npm ci
+            - run: npm run format
             - run: npm run lint
             - run: npm test -w api
